@@ -1,7 +1,8 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/karamba-bluebar_kroller/karamba-bluebar_kroller-0.84.ebuild,v 1.3 2004/02/28 17:58:57 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/karamba-bluebar_kroller/karamba-bluebar_kroller-0.84.ebuild,v 1.4 2004/03/27 15:41:11 aliz Exp $
 
+IUSE=""
 DESCRIPTION="Kroller and Bluebar plugins together for Karamba"
 HOMEPAGE="http://www.kde-look.org/content/show.php?content=5972"
 SRC_URI="http://www.kde-look.org/content/files/5972-bluebar_kroller.tar.gz"
