@@ -1,10 +1,10 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmacpi/wmacpi-1.34.ebuild,v 1.6 2004/03/26 23:10:07 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmacpi/wmacpi-1.34.ebuild,v 1.7 2004/03/27 15:41:11 aliz Exp $
 
 inherit eutils
 
-IUSE=""
+IUSE="acpi apm"
 DESCRIPTION="WMaker DockApp: ACPI status monitor for laptops"
 HOMEPAGE="http://www.ne.jp/asahi/linux/timecop/"
 SRC_URI="http://www.ne.jp/asahi/linux/timecop/software/${P}.tar.gz"
