@@ -1,9 +1,10 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmifs/wmifs-1.3_beta1-r1.ebuild,v 1.2 2004/02/17 07:49:52 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmifs/wmifs-1.3_beta1-r1.ebuild,v 1.3 2004/03/27 15:41:11 aliz Exp $
 
 inherit eutils
 
+IUSE=""
 MY_PV=${PV/_beta/b}
 S=${WORKDIR}/wmifs.app/wmifs
 DESCRIPTION="Network monitoring dock.app"
@@ -15,7 +16,7 @@ DEPEND="virtual/x11"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~mips ~ia64 ~amd64"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha ~hppa ~mips ~ia64 amd64"
 
 src_compile() {
 	unpack ${A}
